style/custom.css
/*-----------------------------------------------------------------------------
| Copyright (c) Max Klein.
| Distributed under the terms of the Modified BSD License.
|----------------------------------------------------------------------------*/

/*
 * Codemirror styling that isn't currently supported by Jupyterlab themes
 */

/* text rendered in stderr with keyword highlight
fix: annoying problem of almost invisible text in stderr */
.jp-RenderedText pre .ansi-yellow-bg {
    background-color: #b52318;
}

.cm-s-jupyter .CodeMirror-activeline-background {
  background: #323232;
}
.cm-s-jupyter .CodeMirror-guttermarker {
  color: #ffee80;
}
.cm-s-jupyter .CodeMirror-guttermarker-subtle {
  color: #d0d0d0;
}
.cm-s-jupyter .CodeMirror-linenumber {
  color: #606366;
}
.cm-s-jupyter .CodeMirror-matchingbracket {
  background-color: #3b514d;
  color: #ffef28 !important;
  font-weight: bold;
}

.cm-s-jupyter div.CodeMirror-selected {
  background: #214283;
}

.cm-s-jupyter span.cm-type {
  color: #aabbcc;
  font-weight: bold;
}

/* override - improve borders of the dir listing */
.jp-DirListing-header {
    border-top: var(--jp-border-width) solid var(--jp-border-color1);
    border-bottom: 2px solid var(--jp-border-color1);
    z-index: 0;
}

/* override - execution time extension styling enhancement */
.execute-time {
    padding: 2px 1px 1px 3px; /* makes text in execute time padded from left but otherwise small */
    /* margin: 1px 1px 1px 1px;  makes border around execute time thicker */
    background: var(--jp-layout-color0);
    border-top: 0px solid var(--jp-cell-editor-border-color);
}

/* override - add-tab button on the tab bar */
.lm-TabBar .lm-TabBar-addButton {
    padding-bottom: 5px; /* make height the same as tabs */
}

/* override - editor tabs - make light border around tabs */
.lm-DockPanel-tabBar .lm-TabBar-tab, .lm-TabPanel-tabBar .lm-TabBar-tab {
    border: var(--jp-border-width) solid var(--jp-border-color0);
     border-bottom: 0px;   /* removed bottom border */
}

/* override - remove border from markdown selected output cell */
.jp-MarkdownOutput {
    border-width: 0px;
}

/* override - turn border off of the cell input area */
.jp-InputArea-editor {
    border: none;
}

/* override - settings restore button */
.jp-SettingsHeader-buttonbar > .jp-RestoreButton {
    color: var(--jp-content-link-color);
}

